--- a/Suporte.html
+++ b/Suporte.html
@@ -140,7 +140,7 @@
                     <p>Assunto</p>
                     <input type="text" id="assuntoEn">
                     <p>Prioridade</p>
-                    <input type="text" id="PrioridadeEn">
+                    <input type="text" id="PrioridadeEn" placeholder="Baixa, Média ou Alta">
                     <p>Mensagem</p>
                     <input type="text" placeholder="Descreva sua duvida ou problema..." id="mensagemEn">
                     <button onclick="enviarMen()">Enviar Mensagem</button>
