--- a/EsqueciMinhaSenha.html
+++ b/EsqueciMinhaSenha.html
@@ -9,7 +9,9 @@
 </head>
 
 <body class="bodyminhasenha">
-    
+    <video autoplay muted loop  playsinline class="videofundo">
+        <source src="img/media.mp4" type="video/mp4">
+    </video>
 
 
     <main>
@@ -37,6 +39,7 @@
     <div class="caixaprecisadeajuda">
         <h1>Precisa de ajuda?</h1>
         <p>Entre em contato com nosso suporte através do chat ou e-mail</p>
+        <p class="email">suporte_techinvestment@gmail.com</p>
     </div>
     </footer>
     <script src="script.js"></script>
