--- a/Cadastro.html
+++ b/Cadastro.html
@@ -9,6 +9,10 @@
 </head>
 
 <body class="corpo">
+    <video autoplay muted loop  playsinline class="videofundo">
+        <source src="img/media.mp4" type="video/mp4">
+    </video>
+    
     <header class="titulo">
         <div class="toptop">
             <img src="img/logo.png" alt="logo" class="imgtop">
